# kio-s3

./: .editorconfig  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md
autotests/: CMakeLists.txt  s3urltest.cpp
desktop/: CMakeLists.txt  org.kde.kio_s3.metainfo.xml  s3-network.desktop
doc/: CMakeLists.txt  index.docbook
po/ar/: kio5_s3.po
po/be/: kio5_s3.po
po/bg/: kio5_s3.po
po/ca/: kio5_s3.po
po/ca/docs/kioworker6/s3/: index.docbook
po/ca@valencia/: kio5_s3.po
po/cs/: kio5_s3.po
po/de/: kio5_s3.po
po/de/docs/kioslave5/s3/: index.docbook
po/el/: kio5_s3.po
po/en_GB/: kio5_s3.po
po/eo/: kio5_s3.po
po/es/: kio5_s3.po
po/es/docs/kioworker6/s3/: index.docbook
po/eu/: kio5_s3.po
po/fi/: kio5_s3.po
po/fr/: kio5_s3.po
po/ga/: kio5_s3.po
po/gl/: kio5_s3.po
po/he/: kio5_s3.po
po/hi/: kio5_s3.po
po/ia/: kio5_s3.po
po/it/: kio5_s3.po
po/it/docs/kioslave5/s3/: index.docbook
po/it/docs/kioworker6/s3/: index.docbook
po/ja/: kio5_s3.po
po/ka/: kio5_s3.po
po/ko/: kio5_s3.po
po/lt/: kio5_s3.po
po/lv/: kio5_s3.po
po/nl/: kio5_s3.po
po/nl/docs/kioworker6/s3/: index.docbook
po/nn/: kio5_s3.po
po/pl/: kio5_s3.po
po/pt/: kio5_s3.po
po/pt_BR/: kio5_s3.po
po/pt_BR/docs/kioslave5/s3/: index.docbook
po/pt_BR/docs/kioworker6/s3/: index.docbook
po/ro/: kio5_s3.po
po/ru/: kio5_s3.po
po/sk/: kio5_s3.po
po/sl/: kio5_s3.po
po/sl/docs/kioworker6/s3/: index.docbook
po/sv/: kio5_s3.po
po/sv/docs/kioslave5/s3/: index.docbook
po/ta/: kio5_s3.po
po/tr/: kio5_s3.po
po/tr/docs/kioslave5/s3/: index.docbook
po/tr/docs/kioworker6/s3/: CMakeLists.txt  index.docbook
po/ug/: kio5_s3.po
po/uk/: kio5_s3.po
po/uk/docs/kioslave5/s3/: index.docbook
po/uk/docs/kioworker6/s3/: index.docbook
po/zh_CN/: kio5_s3.po
po/zh_TW/: kio5_s3.po
src/: CMakeLists.txt  Messages.sh  kio_s3.cpp  kio_s3.h  s3.json  s3backend.cpp  s3backend.h  s3url.cpp  s3url.h
src/kcm/: CMakeLists.txt  kcm_kio_s3.cpp  kcm_kio_s3.h  kcm_kio_s3.json  s3profilemodel.cpp  s3profilemodel.h
src/kcm/ui/: main.qml
